--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             Special thanks to <span class="text-[#dbdee1] font-medium">SugVon</span> for the meticulous build curation.
         </p>
         <p class="text-[11px] text-[#949ba4] opacity-60 max-w-2xl mx-auto leading-relaxed">
-            This library is a collection of community-created builds, aggregated for accessibility. Full credit belongs to the original theorycrafters.
+            This library is a collection of community-created builds, aggregated by <span class="text-[#dbdee1] font-medium">Sbacix</span> for accessibility. Full credit belongs to the original theorycrafters. 
         </p>
     </footer>
 
