--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
     <main class="max-w-[1400px] mx-auto p-4 md:px-6 md:py-4">
         <!-- Subclass Selection Dashboard -->
         <div id="subclassDashboard" class="mb-8 hidden animate-float-in">
-            <h3 class="text-[10px] font-black uppercase text-gray-500 tracking-[0.2em] mb-4 text-center">Specialize Your Path</h3>
+            <h3 class="text-[10px] font-black uppercase text-gray-500 tracking-[0.2em] mb-4 text-center">Pick Your Archetype</h3>
             <div id="subclassGrid" class="grid grid-cols-1 md:grid-cols-3 gap-4 max-w-4xl mx-auto"></div>
         </div>
 
